# rules_k8s

./: .bazelrc  .gitignore  .travis.yml  BUILD  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  OWNERS  README.md  WORKSPACE  print-workspace-status.sh  requirements.txt  requirements_lock.txt  test-e2e-local.sh  test-e2e.sh
.bazelci/: presubmit.yml
.ci/: rules_k8s.json
examples/: BUILD  README.md  container.libsonnet  deployment.libsonnet  e2e_gc.py  util.sh
examples/hello-grpc/: BUILD  deployment.yaml  e2e-test.sh
examples/hello-grpc/cc/: e2e-test.sh
examples/hello-grpc/cc/client/: BUILD  main.cc  simple.cc  simple.h
examples/hello-grpc/cc/server/: BUILD  edit.sh  main.cc
examples/hello-grpc/go/client/: BUILD  main.go
examples/hello-grpc/go/server/: BUILD  edit.sh  main.go
examples/hello-grpc/java/client/: BUILD  HelloClient.java
examples/hello-grpc/java/server/: BUILD  HelloServer.java  edit.sh
examples/hello-grpc/proto/: BUILD  simple.proto
examples/hellogrpc/: BUILD  deployment.jsonnet  deployment.yaml  deployment_test.py  e2e-test.sh  service.yaml
examples/hellogrpc/cc/client/: BUILD  main.cc  simple.cc  simple.h
examples/hellogrpc/cc/server/: BUILD  edit.sh  main.cc
examples/hellogrpc/go/client/: BUILD  main.go
examples/hellogrpc/go/server/: BUILD  edit.sh  main.go
examples/hellogrpc/java/client/: BUILD  HelloClient.java
examples/hellogrpc/java/server/: BUILD  edit.sh
examples/hellogrpc/proto/: BUILD  simple.proto
examples/hellogrpc/py/: requirements.txt
examples/hellogrpc/py/client/: BUILD  client.py
examples/hellogrpc/py/server/: BUILD  edit.sh  server.py
examples/hellohttp/: BUILD  deployment.jsonnet  deployment.yaml  deployment_test.py  e2e-test.sh  service.yaml  static-deployment.yaml
examples/hellohttp/go/: BUILD  edit.sh  main.go
examples/hellohttp/java/: BUILD  edit.sh
examples/hellohttp/nodejs/: BUILD  edit.sh  server.js
examples/hellohttp/py/: BUILD  edit.sh  requirements.txt  server.py
examples/hellohttp2/: BUILD  deployment.jsonnet  deployment.yaml  deployment_test.py  e2e-test.sh  static-deployment.yaml
examples/hellohttp2/go/: BUILD  edit.sh  main.go
examples/hellohttp2/java/: BUILD  Servlet.java  edit.sh
examples/hellohttp2/nodejs/: BUILD  edit.sh  server.js
examples/hellohttp2/py/: BUILD  edit.sh  server.py
examples/imagestamping/: BUILD  deployment.yaml  stamp_variables
examples/imagestamping/go/: BUILD  main.go
examples/lib/: e2e-test-helpers.sh
examples/resolver/: BUILD  e2e-test.sh  resolver.go  resolver.sh  template.yaml
examples/stamping/: BUILD  configmap.yaml  deployment.yaml  substitution_test.py
examples/stamping/go/: BUILD  main.go
examples/todocontroller/: BUILD  deployment.yaml  e2e-test.sh  example.yaml  joined.yaml  todo.yaml
examples/todocontroller/py/: BUILD  controller.py  edit.sh  requirements.txt
hack/: print-workspace-status.sh
images/gcloud-bazel/: BUILD  BUILD.bazel  Dockerfile  Makefile  bazel.list  bazel.pub.gpg  cloudbuild.yaml  sources.list
k8s/: BUILD  apply.sh.tpl  cluster.bzl  clusters.bzl  create.sh.tpl  delete.sh.tpl  describe.sh.tpl  diff.sh.tpl  flags.bzl  k8s.bzl  k8s_go_deps.bzl  kubectl_configure.bzl  kubeval.bzl  kubeval.sh.tpl  kubeval_repos.bzl  object.bzl  objects.bzl  pre_processor.py  replace.sh.tpl  resolve-all.sh.tpl  resolve.sh.tpl  resolver.py  resolver_test.py  reverse.sh.tpl  reverser.py  stamper.py  with-defaults.bzl
k8s/go/cmd/resolver/: BUILD  resolver.go  resolver_test.go
k8s/go/pkg/resolver/: BUILD.bazel  array_flags.go  resolver.go  resolver_test.go  stamper.go
toolchains/kubectl/: BUILD  BUILD.target.tpl  BUILD.tpl  README.md  defaults.bzl  kubectl_configure.bzl  kubectl_toolchain.bzl
tools/: BUILD  kubectl_toolchain.bzl
