# Copyright 2018 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# TODO(fejta): replace Dockerfile with an equivalent bazel rule. This seems promising:
#   https://github.com/GoogleContainerTools/base-images-docker/blob/master/package_managers/bootstrap_image.bzl

load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//container:layer.bzl", "container_layer")

# Gcloud layer. Simply includes an extractec version of the gcloud installation
# archive. Gcloud isn't fully installed as a result of this. The final containe
# needs to run /google-cloud-sdk/install.sh -q and source /google-cloud-sdk/path.bash.inc
# in their bashrc to complete the gcloud installation
container_layer(
    name = "gcloud-layer",
    tars = [
        "@gcloud_archive//file",
    ],
)

# Build an image that uses the official bazel base image and includes the gcloud
# layer on top
container_image(
    name = "image",
    base = "@bazel_image//image",
    layers=[
        ":gcloud-layer",
    ],
    cmd = "",
    entrypoint = "",
)

# TODO (smukherj1): Bootstrap the container image by installing some additional
# packages and running the following post install steps:-
# 1. Run /google/cloud-sdk/install.sh -q to extract the google-gcloud-sdk
#    installation
# 2. Add "source /google-cloud-sdk/path.bash.inc" to PATH to ensure gcloud
#    binaries are in the path
# 3. Run python -m pip install --upgrade pip setuptools wheel to install the
#    latest version of pip, setuptools and wheel
# 4. Run /google-cloud-sdk/bin/gcloud components install --quiet kubectl to
#    install kubernetes as a component of gcloud
