# Copyright 2018 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//container:layer.bzl", "container_layer")
load("@io_bazel_rules_docker//container:push.bzl", "container_push")
load("@base_images_docker//util:run.bzl", "container_run_and_commit")

# Includes the gcloud installation archive
container_layer(
    name = "gcloud-layer",
    tars = [
        "@gcloud_archive//file",
    ],
)

# Build an image that uses the official bazel base image and includes the
# gcloud layer on top
container_image(
    name = "gcloud_installer",
    base = "@bazel_image//image",
    layers=[
        ":gcloud-layer",
    ],
    cmd = "",
    entrypoint = "",
)

# Bootstrap the container image by installing some additional
# packages and running some post install steps
container_run_and_commit(
    name = "gcloud_install",
    image=":gcloud_installer.tar",
    commands = [
        # Finalize the gcloud installation
        "/google-cloud-sdk/install.sh -q",
        # Add the gcloud binaries to PATH
        "echo 'source /google-cloud-sdk/path.bash.inc' >> ~/.bashrc",
        "apt-get update",
        "apt-get install -y --no-install-recommends python-pip",
        "apt-get clean",
        "python -m pip install --upgrade pip setuptools wheel",
        # Install kubernetes as a component of gcloud
        "/google-cloud-sdk/bin/gcloud components install --quiet kubectl",
    ],
)

# Push the container so it can be used by the K8s CI pod spec
# Pod spec: https://github.com/kubernetes/test-infra/blob/master/config/jobs/bazelbuild/rules_k8s/rules_k8s_config.yaml
container_push(
    name="gcloud_push",
    image=":gcloud_install_commit.tar",
    format="Docker",
    registry="gcr.io",
    repository="rules-k8s/gcloud-bazel",
    tag="latest",
)

