load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "resolver",
    srcs = ["resolver.go"],
    importpath = "github.com/bazelbuild/rules_k8s/k8s/go/pkg/resolver",
    visibility = ["//visibility:public"],
    deps = ["@io_bazel_rules_docker//container/go/pkg/utils:go_default_library"],
)
